# unitree_mujoco

./: CLAUDE.md  PLATFORM_SETUP.md  REMOTE_G1_SIM_SETUP.md
scripts/: start_g1_platform.sh
simulate/: config.yaml
simulate/src/: dds_joystick.h  main.cc  param.h  platform_controller.h  unitree_sdk2_bridge.h
tools/keyboard_gamepad/: CMakeLists.txt  keyboard_gamepad.cpp  pulse_gamepad.cpp
tools/platform/: CMakeLists.txt  keyboard_platform.cpp  pulse_platform.cpp
unitree_robots/g1/: scene_platform.xml
